--- a/acknowledge.tex
+++ b/acknowledge.tex
@@ -4,8 +4,7 @@ This research would not have been possible without ...
 
 A nice saying...
 \begin{center}
-\RL{man `llmny .hrfaN, .srto laho `bdaN.}\\
-"For him, who has taught me a single letter, I will be a servant." 
+"To the memory of Sir Michael Atiyah." 
 \end{center}
 
 }
