--- a/introduction.tex
+++ b/introduction.tex
@@ -1,11 +1,11 @@
 %%%%%%%%%%% nomenclature %%%%%%%%%%
-\nomenclature{TAU}{Tel aviv University}
-\nomenclature{IIT}{Insrael institution of technology}
+\nomenclature{TAU}{}
+\nomenclature{IIT}{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Introduction}
 
-An example of a fully vocalised Arabic from the Qur'an (Al-Fatiha 1:1):
+Deterministic Computation and Hierarchy Principle:
 \begin{center}
 \fullvocalize
 \transtrue
