--- a/introduction.tex
+++ b/introduction.tex
@@ -9,10 +9,10 @@ Deterministic Computation and Hierarchy Principle:
 \begin{center}
 It was observed that the physical constants are tightly contrived, but only three dimensionless
 parameters: a, p, and a G, are sufficient to explain the main structures of the world [1]. Two of them
-are precisely measured: the electric constant a ≈ 137.035999139(31), measured with 0.23 ppb
-precision and the proton-electron mass ration p ≈ 1836.15267245(75), known with 0.41 ppb
+are precisely measured: the electric constant $a = 137.035999139(31)$, measured with 0.23 ppb
+precision and the proton-electron mass ration $p = 1836.15267245(75)$, known with 0.41 ppb
 precision. By contrast, the gravitational coupling constant a G was neither well defined nor
-measured, due to the relatively large imprecision on G measurement (10 -4 ).
+measured, due to the relatively large imprecision on G measurement ($10^-4$ ).
 One can read [1]: “For example, the size of a planet is the geometric mean of the size of the
 Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet
 and the mass of a proton. Such relationships, as well as the basic dependences on a and a G from
@@ -30,7 +30,7 @@ between Physics and Mathematics, not to speak of Biology. Through a so-called An
 Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe [1].
 The present article shows that Physics is a part of mathematics, refuting the Multiverse
 Hypothesis by precise fine-tuning between main physical and biological parameters, involving
-main mathematical constants: π, e and γ . Also, these relations confirm the Super-string Theory and
+main mathematical constants: $\pi, e and \gamma $. Also, these relations confirm the Super-string Theory and
 rehabilitates the tachyonic Bosonic String Theory.
 A magic of physics is the energy conservation. Theorists associate it with time uniformity, but a
 more logical explication is that cosmos is a computer, so Intelligent Life receive a justification: to
@@ -50,10 +50,10 @@ prefiguring genetics. In the same manner, this article prefigures the fundamenta
 be based on arithmetics, indeed a characteristic of deterministic computation.
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants.
 The first section explains why, in the Computation Hypothesis, large numbers are necessary, so
-justifying at last the Cosmos vastness. In particular, the most famous prime number of History 2 127 -
-1, and the Eddington's Large number N Ed = 136 × 2 256 are empathized. The second section will study
+justifying at last the Cosmos vastness. In particular, the most famous prime number of History $2^127 -
+1$, and the Eddington's Large number $N_Ed = 136 \mult{2^256}$ are empathized. The second section will study
 the role of intermediate mathematical constants such as the Eddington's constant 137. The third
-Section involves mathematical constants, such as π and γ. By contrast, the optimal computation
+Section involves mathematical constants, such as $\piπ and \gamma$. By contrast, the optimal computation
 basis e is used all along, in particular as the primary basis of the Topological Axis (the secondary
 basis being 2, the simplest of all)..
 \end{center}
