--- a/introduction.tex
+++ b/introduction.tex
@@ -53,7 +53,7 @@ The first section explains why, in the Computation Hypothesis, large numbers are
 justifying at last the Cosmos vastness. In particular, the most famous prime number of History $2^127 -
 1$, and the Eddington's Large number $N_Ed = 136 \mult{2^256}$ are empathized. The second section will study
 the role of intermediate mathematical constants such as the Eddington's constant 137. The third
-Section involves mathematical constants, such as $\piπ and \gamma$. By contrast, the optimal computation
+Section involves mathematical constants, such as $\pi and \gamma$. By contrast, the optimal computation
 basis e is used all along, in particular as the primary basis of the Topological Axis (the secondary
 basis being 2, the simplest of all)..
 \end{center}
