--- a/abstract.tex
+++ b/abstract.tex
@@ -14,7 +14,7 @@ primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holi
 dimensions corresponding to the simplest physical diophantine equation $T^2 = L^3 = M^5 =
 N^30$ . The point $n = 30$ corresponds to the common time, about $10^58 s$, given by two
 mandatory dimensional analysis, interpreted as the Supercycle period. The visible Universe
-wavelength 'Topon' $2G ħ/ Rc^3 = 4 × 10^-96 m$ corresponds to $n = 2e^e$ and enters the 1D mono-
+wavelength 'Topon' $2G ħ/ Rc^3 = 4 \cdot 10^-96 m$ corresponds to $n = 2e^e$ and enters the 1D mono-
 radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the
 critical condition, and breaking the Planck wall by a factor $10^61$ . The monochrome
 holographic extension leads to a Grandcosmos, larger than the visible Universe by the
@@ -27,7 +27,7 @@ state cosmology, but suppress Relativity in cosmology, reestablishing the Newton
 Space-Time realized by the Microwave Cosmic Radiation. This new space-time structure are
 tied to unexplained phenomena such as Kotov cycle, Tifft periodicity, Pioneer anomaly and
 Arp observations. The Kotov period, omnipresent in astrophysics, is directly related with the
-single-electron cosmology by a $10^-9$ relation. In addition to e, the Archimedes constant π
+single-electron cosmology by a $10^-9$ relation. In addition to e, the Archimedes constant $\pi$
 and the electric constant $a = 137.036$ appear as privileged calculation basis. The fusion
 Mathematics-Physics is confirmed by 10 -9 precise relations with physical parameters
 implying Eddington's 137 and Atiyah constant. The later enters the Topological axis in
