--- a/introduction.tex
+++ b/introduction.tex
@@ -13,13 +13,13 @@ are precisely measured: the electric constant $a = 137.035999139(31)$, measured 
 precision and the proton-electron mass ration $p = 1836.15267245(75)$, known with 0.41 ppb
 precision. By contrast, the gravitational coupling constant a G was neither well defined nor
 measured, due to the relatively large imprecision on G measurement ($10^-4$ ).
-One can read [1]: “For example, the size of a planet is the geometric mean of the size of the
+One can read [1]: 'For example, the size of a planet is the geometric mean of the size of the
 Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet
 and the mass of a proton. Such relationships, as well as the basic dependences on a and a G from
 which they derive, might be regarded as coincidences if one does not appreciate that they can be
 deduced from known physical theory, with the exception of the Universe, which cannot be explained
 directly from kwown physics.... This line of arguments, which is discussed later, appeals to the
-'anthropic principle'.”
+**anthropic principle**.'
 The existence of relations that are not explained by known physical theories, is called 'fine
 tuning' phenomena. But as soon as it involves the observable Universe radius, it signals the
 existence of a more fundamental theory that must take into account the ancestral Cosmos concept,
@@ -51,7 +51,7 @@ be based on arithmetics, indeed a characteristic of deterministic computation.
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants.
 The first section explains why, in the Computation Hypothesis, large numbers are necessary, so
 justifying at last the Cosmos vastness. In particular, the most famous prime number of History $2^127 -
-1$, and the Eddington's Large number $N_Ed = 136 \mult{2^256}$ are empathized. The second section will study
+1$, and the Eddington's Large number $N_Ed = 136 \cdot {2^256}$ are empathized. The second section will study
 the role of intermediate mathematical constants such as the Eddington's constant 137. The third
 Section involves mathematical constants, such as $\pi and \gamma$. By contrast, the optimal computation
 basis e is used all along, in particular as the primary basis of the Topological Axis (the secondary
