--- a/Thesis-main.tex
+++ b/Thesis-main.tex
@@ -66,16 +66,16 @@
 \newcommand{\hsp}{\hspace{20pt}}
 \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp}{0pt}{\Huge\bfseries}
 
-\University{Tel Aviv University}
-\Faculty{The Iby and Aladar Fleischman Faculty of Engineering}
-\School{The Zandman-Slaner School of Graduate Studies}
-\Department {Department of Electrical Engineering - Systems}
-\Title{\textbf{ \uppercase {<Thesis Title>}}}
-\Degree{Master of Science in Engineering}
-\Author{<Your name>}
-\Year{<September 2014>}
-\Supervisor{<Prof. first supervisor]>}
-\SecondSupervisor{<Dr. second Supervisor>}
+\University{University of Paris 11}
+\Faculty{Faculty}
+\School{School}
+\Department {Department of Physics}
+\Title{\textbf{ \uppercase {<Evidence for a Steady-State, Holographic, Tachyonic and Super-Symmetric Cosmology>}}}
+\Degree{N/A}
+\Author{<Dr Francis M. Sanchez>}
+\Year{<April 2019>}
+\Supervisor{<N/A>}
+\SecondSupervisor{<N/A>}
 
 \makeatother
 
@@ -91,8 +91,8 @@
 
 \secondtitlepage
 
-\dedication{\textbf{\emph{To my whomever, \\
-for being whatever}}}
+\dedication{\textbf{\emph{To the memory of \\
+Sir Michael Atiyah.}}}
 
 \include{acknowledge}
 
