--- a/acknowledge.tex
+++ b/acknowledge.tex
@@ -2,9 +2,8 @@
 \thispagestyle{empty}
 This research would not have been possible without ...
 
-A nice saying...
 \begin{center}
-"To the memory of Sir Michael Atiyah." 
+"Francis M. Sanchez, Valery A. Kotov, Michel Grosmann, Dominique Weigel, Renee Veysseyre, Christian Bizouard, Nicolas Flawisky, Denis Gayral, Laurent Gueroult." 
 \end{center}
 
 }
