--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,14 +1,8 @@
 
 %%%%%%%%%%% Nomenclature for this chapter%%%%%%%%%%
-\nomenclature{TAU}{Tel-Aviv University}
-
-
-
+\nomenclature{UOP}{University of Paris 11}
 \chapter{Basic examples}
 \label{chap:chapter_1}
-
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -19,7 +13,7 @@
 Citations are very simple. 
 Add all the references in the references files.
 You can you Google scholar to easily copy the bibtex.
-For instance, this paper \cite{kour2014real} is awsome.
+For instance, this paper \cite{fm1} is awesome.
 
 See Figure \ref{fig:figure_label} as an example on how to add figures to your thesis.
 It is recommended that all figures to be kept in a separate directory.
