--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%% nomenclature %%%%%%%%%%
-\nomenclature{TAU}{}
-\nomenclature{IIT}{}
+\nomenclature{UOP}{}
+%\nomenclature{IIT}{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Introduction}
