--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,7 +1,7 @@
-\chapter{Summary, Conclusions and Future Work}
+\chapter{Fine-tuning with intermediate Mathematical Constants}
 
 \begin{itemize}
-\item item 1
-\item item 2
+\item The Arithmetical Monster Prime 137
+\item The Arithmetical Logic : Holic Principle and Topological Axis
 \end{itemize}
 
