--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,7 +1,7 @@
 
 %%%%%%%%%%% Nomenclature for this chapter%%%%%%%%%%
 \nomenclature{UOP}{University of Paris 11}
-\chapter{Basic examples}
+\chapter{Internal Fine Tuning and Canonical Large Numbers}
 \label{chap:chapter_1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
