--- a/introduction.tex
+++ b/introduction.tex
@@ -50,8 +50,8 @@ prefiguring genetics. In the same manner, this article prefigures the fundamenta
 be based on arithmetics, indeed a characteristic of deterministic computation.
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants.
 The first section explains why, in the Computation Hypothesis, large numbers are necessary, so
-justifying at last the Cosmos vastness. In particular, the most famous prime number of History $2^127 -
-1$, and the Eddington's Large number $N_Ed = 136 \cdot {2^256}$ are empathized. The second section will study
+justifying at last the Cosmos vastness. In particular, the most famous prime number of History $2^{127} -
+1$, and the Eddington's Large number $N_Ed = 136 \cdot 2^{256}$ are empathized. The second section will study
 the role of intermediate mathematical constants such as the Eddington's constant 137. The third
 Section involves mathematical constants, such as $\pi and \gamma$. By contrast, the optimal computation
 basis e is used all along, in particular as the primary basis of the Topological Axis (the secondary
