--- a/abstract.tex
+++ b/abstract.tex
@@ -22,14 +22,14 @@ same factor $10^{61}$ . This implies a tachyonic speed in the same ratio by resp
 the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir
 effect. The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional
 analysis, where Length, Time and Mass are considered as unit vectors in a 3D Super-space.
-A mater-antimater $10^104 Hz$ Oscillatory Bounce unifies standard Single Bang with steady-
+A mater-antimater $ 10^104 Hz$ Oscillatory Bounce unifies standard Single Bang with steady-
 state cosmology, but suppress Relativity in cosmology, reestablishing the Newton Absolute
 Space-Time realized by the Microwave Cosmic Radiation. This new space-time structure are
 tied to unexplained phenomena such as Kotov cycle, Tifft periodicity, Pioneer anomaly and
 Arp observations. The Kotov period, omnipresent in astrophysics, is directly related with the
 single-electron cosmology by a $10^{-9}$ relation. In addition to e, the Archimedes constant $\pi$
 and the electric constant $a = 137.036$ appear as privileged calculation basis. The fusion
-Mathematics-Physics is confirmed by 10^{-9} precise relations with physical parameters
+Mathematics-Physics is confirmed by $10^{-9}$ precise relations with physical parameters
 implying Eddington's 137 and Atiyah constant. The later enters the Topological axis in
 liaison with the canonical Galaxy Group radius, the graviton mass and the Higgs Boson,
 the later being associated to the string dimension $d = 496$. The dramatic connexion of
@@ -39,6 +39,6 @@ Monster group cardinal, with the Kotov period, itself tied to the well-defined D
 mass. The ratio between the Universe mass and the mass associated with the Kotov period,
 identified with a photon mass, is close to the square of the Monster order. The ratio between
 the Supercycle period and the Chronon quantum is close to the third power of the Monster
-order, also close to $e^{137}e$ and $d^{60}$ . It is predicted that the future infra-red spatial telescopes
+order, also close to $ e^{137e}$ and $ d^{60}$ . It is predicted that the future infra-red spatial telescopes
 will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely
 the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
